# rapid-adaptation-w-rec-on-tunable-fl

./: README.md  analyses_20220309.sh  fl_DT_20220309.sh
code/: .RData  .Rhistory  RMF_ruggedness_twoLocExpectation.py  adaptivePath.ratio.R  adaptivePath.ratio.mt.R  compFinalGlobal.pl  compInitialFinal.pl  compInitialGlobal.pl  distance2global.R  distance2initial.R  distance2initial.mt.R  epiTraj.mt.R  epiTraj2final.R  epiTraj2final.abs.R  epiTraj2final.pl  epiTraj2major.pl  finalGenoDiversity.pl  fitnessChange.R  fitnessChange.mt.R  fixAlelleFrq.mt.1.R  fixAlelleFrq.mt.R  fixAlleleInitFreq.ordered.pl  fixAlleleInitFreq.pl  fixGenoInit.R  fixGenoInit.pl  fixMinorAllelePro.R  fixationTime.R  fixationTime.mt.R  getPopDetail.pl  initAlleleFrq.R  initAlleleFrq.mt.R  initMinorAlleleFrq.R  legend.R  oneLocusEffect.mt.R  oneLocusEffect2final.R  oneLocusEffect2final.abs.R  oneLocusEffect2final.pl  oneLocusEffect2major.pl
code/stunV0/recombination-main/: .gitignore  Cargo.toml  README.md  SSWM.py  compile
code/stunV0/recombination-main/src/: calculate_haplotypes_number.rs  generate_landscapes.rs  lib.rs  main.rs
