[package]
name = "haploid_recombination"
version = "0.1.0"
authors = ["André Amado <andreamado1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "haploid_recombination"
path = "src/main.rs"

[[bin]]
name = "generate_landscapes"
path = "src/generate_landscapes.rs"

[[bin]]
name = "calculate_haplotypes"
path = "src/calculate_haplotypes_number.rs"

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["float_roundtrip"] }
bincode = "1.3.3"
glob = "0.3.0"
